Resolves: fdo#68081 why would I want a spinner that doesn't repeat

surely WB_SPIN should imply repeat in the first place, *shrug*

Change-Id: I1e4cb5a01d473cd0f8d907d566cd26d51a81da93